Bug 160782 - SVG: feComposite: nothing displayed when element has stroke
Summary: SVG: feComposite: nothing displayed when element has stroke
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.8.0 inReleaseNotes:24.8
Keywords: filter:svg
Depends on:
Blocks: SVG-Import SVG-filters
  Show dependency treegraph
 
Reported: 2024-04-22 13:50 UTC by Xisco Faulí
Modified: 2024-07-12 01:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (1.06 KB, image/svg+xml)
2024-04-22 13:50 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-04-22 13:50:45 UTC
Created attachment 193802 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Nothing is displayed

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c61aeb5b87d1a69745617b1368a86b70d798ba30
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2024-04-22 15:39:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1097686ebddd48b78816d87524caadd17b788c23

tdf#160782: convert to bitmapEx from 0,0 to width,height

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 stragu 2024-07-12 01:10:20 UTC
Verified in:

Version: 24.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 1b61abc4451d38984338b750d85770ec9871060a
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Thanks Xisco!